Ensure correctness for interleaved IndexedDB cursor iteration.

BUG=702787

Review-Url: https://codereview.chromium.org/2763813002
Cr-Commit-Position: refs/heads/master@{#459613}

Former-commit-id: 9de6f24edfb54f9afd3d2dee474a2602585f68dc